# HPCC-Platform

./: 404.html  BUILD_ME.html  CMakeLists.txt  README.html  hashmap.json  index.html
assets/: BUILD_ME.md.TBvrXLmk.js  BUILD_ME.md.TBvrXLmk.lean.js  README.md.st83WegH.js  README.md.st83WegH.lean.js  cmake_modules_DOCUMENTATION.md.aDwNsae-.js  cmake_modules_DOCUMENTATION.md.aDwNsae-.lean.js  devdoc_CodeGenerator.md.w_oEOLZV.js  devdoc_CodeGenerator.md.w_oEOLZV.lean.js  devdoc_CodeReviews.md.0MNW7MLv.js  devdoc_CodeReviews.md.0MNW7MLv.lean.js  devdoc_CodeSubmissions.md.krHZemzg.js  devdoc_CodeSubmissions.md.krHZemzg.lean.js  devdoc_DevDocs.md.Jt8KhEXh.js  devdoc_DevDocs.md.Jt8KhEXh.lean.js  devdoc_Development.md.P7h6fr16.js  devdoc_Development.md.P7h6fr16.lean.js  devdoc_GitAuthenticate.md.tybQXmZ7.js  devdoc_GitAuthenticate.md.tybQXmZ7.lean.js  devdoc_LDAPSecurityManager.md.abJBCjgi.js  devdoc_LDAPSecurityManager.md.abJBCjgi.lean.js  devdoc_MemoryManager.md.yRlzE2P3.js  devdoc_MemoryManager.md.yRlzE2P3.lean.js  devdoc_Metrics.md.tF7sjvpz.js  devdoc_Metrics.md.tF7sjvpz.lean.js  devdoc_NewFileProcessing.md.-OABnIEr.js  devdoc_NewFileProcessing.md.-OABnIEr.lean.js  devdoc_README.md.YeAwxr5w.js  devdoc_README.md.YeAwxr5w.lean.js  devdoc_SecurityConfig.md.jaElHuRt.js  devdoc_SecurityConfig.md.jaElHuRt.lean.js  devdoc_SecurityUserAuthentication.md.ypVPh_v0.js  devdoc_SecurityUserAuthentication.md.ypVPh_v0.lean.js  devdoc_StyleGuide.md.L7BtF-Tz.js  devdoc_Workunits.md.oKeaPGpI.js  (+37 more)
system/security/plugins/mockSecurity/: CMakeLists.txt  README.md  mockSecurity.cpp  mockSecurity.hpp
system/security/plugins/mockSecurity/initfiles/: CMakeLists.txt
system/security/plugins/mockSecurity/initfiles/componentfiles/: CMakeLists.txt
system/security/plugins/mockSecurity/initfiles/componentfiles/configxml/: CMakeLists.txt  buildset.xml  mock_secmgr.xsd
(+112 files in other folders)
